SigmaCodebackup3rdSep/objects/Allocation_Item_Manufaturing_Run__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_Quantity__c</fullName>
        <label>Allocated Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Allocation_For_Manufaturing_Run__c</fullName>
        <label>Auto Allocation For Manufacturing Run</label>
        <referenceTo>Auto_Allocations_For_Manufaturing_Run__c</referenceTo>
        <relationshipLabel>Allocation Item Manufaturing Runs</relationshipLabel>
        <relationshipName>Allocation_Item_Manufaturing_Runs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product Line Item</label>
        <referenceTo>Inventory_Location_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Allocation Item Manufaturing Runs</relationshipLabel>
        <relationshipName>Allocation_Item_Manufaturing_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Inventory_Location_Product_Line_Item__r.Inventory_Location_Product__r.Inventory_Location__r.Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordered_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ordered Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Allocation Item Manufaturing Runs</relationshipLabel>
        <relationshipName>Allocation_Item_Manufaturing_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <label>Remaining Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Quantity__c</fullName>
        <label>Selected Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Packaged</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Allocation Item Manufaturing Run</label>
    <nameField>
        <displayFormat>ALMR-{00000}</displayFormat>
        <label>Allocation Item Manufaturing Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Item Manufaturing Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>